--- a/src/main/resources/templates/boards/detail.html
+++ b/src/main/resources/templates/boards/detail.html
@@ -11,10 +11,10 @@
             navigation: auto;
         }
     </style>
-    <!--/*/ <th:block th:replace="~{fragments/head :: head('board detail - boardhole')}"/> /*/-->
+    <th:block th:replace="~{fragments/head :: head('board detail - boardhole')}"/>
 </head>
 <body class="bg-slate-50 text-slate-900">
-    <!--/*/ <th:block th:replace="~{layouts/shell :: shell('board detail - boardhole', ~{::main})}"/> /*/-->
+<th:block th:replace="~{layouts/shell :: shell('board detail - boardhole', ~{::main})}">
     <main class="flex-1">
                 <section class="mx-auto max-w-6xl px-6 pt-10 pb-6">
                     <!-- 페이지 타이틀 -->
@@ -132,5 +132,6 @@
                     </article>
                 </section>
             </main>
+</th:block>
 </body>
 </html>
