--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -10,10 +10,10 @@
             navigation: auto;
         }
     </style>
-    <!--/*/ <th:block th:replace="~{fragments/head :: head('users - boardhole')}"/> /*/-->
+    <th:block th:replace="~{fragments/head :: head('users - boardhole')}"/>
 </head>
 <body class="bg-slate-50 text-slate-900">
-    <!--/*/ <th:block th:replace="~{layouts/shell :: shell('users - boardhole', ~{::main})}"/> /*/-->
+<th:block th:replace="~{layouts/shell :: shell('users - boardhole', ~{::main})}">
     <main class="flex-1">
                 <section class="mx-auto max-w-6xl px-6 pt-10 pb-6">
                     <!-- 페이지 타이틀 -->
@@ -100,5 +100,6 @@
                         </a>
                     </nav>
             </main>
+</th:block>
 </body>
 </html>
